components updated, features and packages added

--- a/src/app/pages/about/team/team.component.html
+++ b/src/app/pages/about/team/team.component.html
@@ -1,3 +1,33 @@
-<img src="assets/mrAlfredImg.png" alt="mrAlfredImg">
-<img src="assets/MajekodunmiImg.png" alt="majekondunmiImg">
-<img src="assets/chioma1Img.png" alt="chiomaImg">
+<section>
+
+    <h3 class="text-[#0F2B8E] text-xl md:text-3xl lg:text-5xl font-bold mt-12">Meet The Associate Team</h3>
+
+    <div class="flex items-center justify-center md:justify-start">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-16 mt-12">
+        
+        <div>
+            <img src="assets/mrAlfredImg.png" alt="mrAlfredImg">
+            <p>Alfred Ade-Ijimakinwa</p>
+            <p>Patner / Senior Broker</p>
+        </div>
+
+        <div>
+            <img src="assets/MajekodunmiImg.png" alt="majekondunmiImg">
+            <p>Arc. (Mrs.) Adebola Majekodunmi</p>
+            <p>Partner / Director, Projects</p>
+        </div>
+
+        <div>
+            <img src="assets/chioma1Img.png" alt="chiomaImg">
+            <p>Choima Odukwe</p>
+            <p>Director, Marketing and Sale</p>
+        </div>
+
+    </div>
+    </div>
+
+</section>
+
+
+
+
