--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -9,19 +9,36 @@
     </div>
 </section>
 
-<section>
-    <div class="flex">
-        <div class="grid grid-cols-3">
-
-            <div class="">
-
+<section class="w-[87%] mx-auto">
+    <div class="flex justify-center">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:gap-10">
+          <!-- call -->
+            <div class="w-[350px] h-[250px] mt-16 bg-sky-600 bg-opacity-20 flex items-center flex-col justify-center">
+              <div class="w-[103px] h-[103px] bg-zinc-300 rounded-full border-2 border-sky-600 flex justify-center items-center">
+                <img src="assets/phone-call.png" alt="phoneImg">
+              </div>
+               <p class="font-['poppins'] text-[#0F2B8E] font-semibold mt-2 text-xl">Call Us</p>
+               <p class="font-['poppins']">+234 916 684 9442</p>
             </div>
-            <div>
-
+           
+            <!-- mail -->
+            <div class="w-[350px] h-[250px] mt-16 bg-sky-600 bg-opacity-20 flex items-center flex-col justify-center">
+              <div class="w-[103px] h-[103px] bg-zinc-300 rounded-full border-2 border-sky-600 flex justify-center items-center">
+                <img src="assets/mail.png" alt="mailImg">
+              </div>
+               <p class="font-['poppins'] text-[#0F2B8E] font-semibold mt-2 text-xl">Send a mail</p>
+               <p class="font-['poppins']">info@blueearthproperties.com</p>
             </div>
-            <div>
 
+            <!-- whats app -->
+            <div class="w-[350px] h-[250px] mt-16 bg-sky-600 bg-opacity-20 flex items-center flex-col justify-center">
+              <div class="w-[103px] h-[103px] bg-zinc-300 rounded-full border-2 border-sky-600 flex justify-center items-center">
+                <img src="assets/whatsapp.png" alt="whatsappImg">
+              </div>
+               <p class="font-['poppins'] text-[#0F2B8E] font-semibold mt-2 text-xl">Whats App</p>
+               <p class="font-['poppins']">+234 916 684 9442</p>
             </div>
+
         </div>
 
     </div>
