--- a/src/app/pages/property/house-one/house-one.component.css
+++ b/src/app/pages/property/house-one/house-one.component.css
@@ -17,3 +17,13 @@ p{
 .media{
     color: #0F2B8E ;
 }
+
+
+@media screen and (max-width : 600px) {
+
+    .customImg{
+     width: 20rem;
+     height: 21rem;
+    }
+
+  } 
