--- a/src/app/pages/about/meet-broker/meet-broker.component.html
+++ b/src/app/pages/about/meet-broker/meet-broker.component.html
@@ -2,7 +2,7 @@
 
 <h3 class="mb-2 lg:mb-5 mt-4 lg:text-left text-center">Meet The Broker</h3>
 
-<div class="flex flex-col justify-center gap-5">
+<div class="flex lg:flex-row flex-col justify-center items-center gap-5">
 
     <img src="assets/mrAlfredImg.png" class="self-center lg:self-start w-[450px] h-[360px]  mt-5" alt="Alfred Ijimakinwa Img">
 
