--- a/src/app/pages/invest/invest.component.css
+++ b/src/app/pages/invest/invest.component.css
@@ -25,10 +25,10 @@ h4{
 }
 
 .cardHead{
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 600;
     font-family: var(--poppins);
-    color: black;
+    color: var(--headingColor);
 }
 
 .cardTxt{
@@ -46,8 +46,8 @@ span{
 
 .price{
     font-family: var(--poppins);
-    color: black;
-    font-size: 20px;
+    color: #3F3D56;
+    font-size: 16px;
     font-weight: 600;
 }
 
