--- a/src/app/pages/sell/sell.component.html
+++ b/src/app/pages/sell/sell.component.html
@@ -8,7 +8,7 @@
     <h3 class="w-full lg:w-[80%]">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
     <p class="name">Oma Daniel</p>
     <p class="italic description">Property Consierge at Blue Earth Properties </p>
-    <button class="p-2 px-4 my-5 text-white bg-[#0072C6] rounded hover:bg-[#289416] transition-all">Get Started</button>
+    <button class="p-2 px-4 my-5 text-white bg-[#0072C6] rounded hover:bg-[#289416] transition-all" (click)="toggleModal()" >Get Started</button>
 </div>
     
 <div class="aspect-w-16 aspect-h-9">
@@ -100,3 +100,63 @@
 </section>
 
 <app-footer></app-footer>
+
+<!-- modal -->
+<div *ngIf="showModal" class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center flex">
+    <div class="relative w-auto my-6 mx-auto max-w-6xl">
+      <!--content-->
+      <div class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
+        <!--header-->
+        <div class="flex items-start justify-between p-5 border-b border-solid border-blueGray-200 rounded-t">
+          <h3 class="text-2xl modalHeader font-['poppins'] text-[#0F2B8E] font-semibold">
+            Sell Your Property
+          </h3>
+          <button class="p-1 ml-auto float-right text-3xl leading-none font-semibold outline-none focus:outline-none" (click)="toggleModal()">
+            <span class="text-red-700 material-symbols-outlined">
+              close
+              </span>
+          </button>
+        </div>
+        <!--body-->
+        <div class="relative p-6 flex-auto">
+          <p class="text-xl font-medium font-['poppins']">Sell Your Property within 60 Days with Blue Earth Properties</p>
+          <p class="text-sm italic font-light font-['poppins'] my-3"><span class="text-red-500">*</span> All Fields are Required </p>
+          <form>
+  
+          <div class="mb-2">
+            <label for="fullName" class="block mb-2 font-['poppins'] text-[#3F3D56]">Full Name</label>
+            <input type="text" class="shadow appearance-none border rounded w-full py-3 px-3 text-gray-700 mb-3 leading-tight focus:outline-blue-300 focus:shadow-outline" placeholder="John Doe" required>
+          </div>
+  
+          <div class="mb-2">
+            <label for="location" class="block mb-2 font-['poppins'] text-[#3F3D56]">Property Location</label>
+            <input type="text" class="shadow appearance-none border rounded w-full py-3 px-3 text-gray-700 mb-3 leading-tight focus:outline-blue-300 focus:shadow-outline" placeholder="Location" required>
+          </div>
+
+          <div class="mb-2">
+            <label for="email" class="block mb-2 font-['poppins'] text-[#3F3D56]">Email</label>
+            <input type="email" class="shadow appearance-none border rounded w-full py-3 px-3 text-gray-700 mb-3 leading-tight focus:outline-blue-300 focus:shadow-outline" placeholder="JohnDoe@mail.com" required>
+          </div>
+  
+          <div>
+            <label for="telephoneNumber" class="block mb-2 font-['poppins'] text-[#3F3D56]">Phone Number</label>
+            <input type="tel" class="shadow appearance-none border rounded w-full py-3 px-3 text-gray-700 mb-3 leading-tight focus:outline-blue-300 focus:shadow-outline" placeholder="+23480123456789" required>
+          </div>
+  
+          
+          </form>
+  
+        </div>
+        <!--footer-->
+        <div class="flex items-center justify-end p-6 border-t border-solid border-blueGray-200 rounded-b">
+          <button class="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button" (click)="toggleModal()">
+            Close
+          </button>
+          <button class="bg-[#0072C6] text-white  font-bold capitalize font-['poppins'] text-sm px-4 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button" (click)="toggleModal()">
+            Submit
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="showModal" class="opacity-25 fixed inset-0 z-40 bg-black"></div>
